--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "msw": "^2.7.3",
+    "tailwind-scrollbar": "^4.0.1",
     "vite": "^6.1.0",
     "vitest": "^3.0.7"
   }
